# audiobook

./: .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AGENT_TASKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COVERAGE_GUARD_SUMMARY.md  Dockerfile  EXECUTION_CHECKLIST.md  HARNESS_SPECIFICATIONS.md  IMPLEMENTATION_ROADMAP.md  LICENSE  PROJECT.md  PROJECT_STATUS.md  README.md  SymCore.code-workspace  TEST_SUMMARY.md  alembic.ini  check_rules.sh  cov_report.json  coverage.json  docker-compose.observability.yaml  docker-compose.yml  download_novel.py  fix_test.py  gen_coverage_report.py  generate_report.py  launch_all.sh  mkdocs.yml  mypy.ini  openapi.json  print_coverage.py  promptfoo.yaml  (+23 more)
.github/: CODEOWNERS
ab_test_results/: ab_test_a553d523-0221-4112-b642-9bd27aa047ce.html  ab_test_a553d523-0221-4112-b642-9bd27aa047ce.json
alembic/: env.py
config/: agent_sop.json  constitutional_rules.yaml  contract_versions.yaml  hardware_profile.yaml  llm_providers.yaml  llm_providers.yaml.bak  llm_providers.yaml.example  pipeline.yaml  quality_thresholds.yaml  voice_mapping.yaml
data/: hongloumeng.txt  sanguoyanyi.txt  test_chapter.txt
docs/: AGENT_ISOLATION_POLICY.md  ANALYSIS_SUMMARY.md  AUDIT_REPORT_v2.md  AUDIT_REPORT_v3.md  DEVELOPMENT_PLAN.md  EXECUTION_CHECKLIST.md  EXECUTION_CHECKLIST_v2.md  HARNESS_SPECIFICATIONS_EXAMPLE.md  IMPLEMENTATION_ROADMAP.md  PROJECT.md  README_ARCHIVE.md  RELEASE_NOTES.md  RUNBOOK_rotate_credentials.md  SECURITY.md  SPRINT_G_COMPLETION_RECORD.md  agents.md  api.md  api_reference.md  architecture.md  architecture_deep_dive.md  contributing.md  deployment.md  faq.md  frontend-feature-list.md  frontend-types-contract.ts  git-commit-log.md  harness_guide.md  harness_specifications.md  index.md  installation.md  merge_docs.py  performance.md  pipeline_tts.md  quick_start.md  troubleshooting.md  user-guide.md
feeds/: saneti_podcast.rss
input/: Carnival-Annette_Keen.epub  test_story.txt
logs/: metrics_20260616.json  promotion_metrics.jsonl  self_iteration_self_iteration.jsonl
notebooks/: ml_workflow.ipynb
prompts/: ocr_prompt.txt  quality_prompt.txt  text_clean_prompt.txt  tts_prompt.txt
reports/: audiobookshelf-integration-report.md  coverage_baseline.json  e2e_final.json  e2e_hongloumeng.json  e2e_long_book_50.json  e2e_long_book_report.json  e2e_long_book_report.md  e2e_long_book_test.json  engineering_audit_report.md  frontend-backend-gap-analysis.md  issue_2_1_synthetic_critic_report.json  p0-ai-api-implementation-report.md  p0-improvement-completion-report.md  p0_fix_final_report.json  sprint_a_p1_archive.json  technical_debt_audit.md  technical_debt_status.md  voxcpm2_benchmark_report.json  voxcpm2_benchmark_report.md
scripts/: ab_test_manager.py  agent-worktree-setup.sh  alert.py  audiobookshelf_integration.py  bench_cost.py  bench_latency.py  bootstrap_fewshot.py  ci_performance_check.py  clean_before_commit.sh  contract_compliance_check.py  cost_dashboard.py  coverage_check.py  docs_guard.py  download_kokoro_model.py  download_voxcpm2.py  e2e_long_book.py  feedback_processor.py  generate_changelog_fragment.py  generate_golden_dataset.py  generate_golden_mocks.py  generate_health_report.sh  generate_secrets.py  gradual_promotion.py  manual_feedback_inject.py  monitoring_dashboard.py  offline_monitoring.py  podcast_rss_generator.py  post-commit-hook.sh  pre-commit-coverage.py  promote.py  run_ab_test.py  run_e2e_verification.py  run_self_iteration.py  self_iteration_loop.py  semantic_coherence.py  sync_orm_schema.py  team_collaboration.py  version_manager.py  voice_cloning.py
src/: worker_base.py
tests/: __init__.py  conftest.py  conftest_integration.py  conftest_minimal.py  contract_test.py  test_analyze.py  test_annotate.py  test_api.py  test_audio_postprocess.py  test_checkpoint.py  test_edit.py  test_extract.py  test_llm_router.py  test_pipeline_integration.py  test_quality_check.py  test_remote_voxcpm2.py  test_sample.py  test_stability.py  (+4 more)
(+814 files in other folders)
