[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-studio"
version = "0.1.0"
description = "Audiobook Studio - AI-powered audiobook generation pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "ffmpeg-python>=0.2.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.0",
    "apscheduler>=3.10.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "flower>=2.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-typeguard>=2.1.0",
    "hypothesis>=6.92.0",
    "deepeval>=0.20.0",
    "promptfoo>=0.7.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.2.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "pytest-typeguard>=2.1.0",
    "hypothesis>=6.92.0",
    "deepeval>=0.20.0",
    "promptfoo>=0.7.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-bugbear>=24.2.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.5.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks tests as benchmark tests",
    "contract: marks tests as contract tests",
    "smoke: marks tests as smoke tests (fast, MOCK_LLM=true)",
]

[tool.coverage.run]
source = ["src"]
concurrency = ["multiprocessing", "thread"]
sigterm = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "src/audiobook_studio/tts/voice_cloning.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "pass",
    "\\.\\.\\.",
    "TYPE_CHECKING",
]
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.black]
line-length = 120
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
  | node_modules
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src"]

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,W503,E501,F401,F811,B008,E402"
select = "C,E,F,W,B,B9"
ignore = "E203,W503"
per-file-ignores = [
    "tests/*:S101",
    "src/audiobook_studio/tts/voice_cloning.py:ALL",
]

[tool.mypy]
config_file = "mypy.ini"

[tool.bandit]
targets = ["src"]
severity_level = "high"
skip = ["B101"]

[tool.detect-secrets]
baseline = ".secrets.baseline"
exclude = '''
\.pytest_cache
\.venv
htmlcov
__pycache__
\.git
node_modules
'''

[tool.pytest-cov]
cov-config = "pyproject.toml"
